ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: wordpress
          servicePort: 5003
      - path: /vote(/|$)(.*)
        backend:
          serviceName: vote-test
          servicePort: 5002
    #   - path: /static(/|$)(.*)
    #     backend:
    #       serviceName: vote-test
    #       servicePort: 5002
      - path: /result(/|$)(.*)
        backend:
          serviceName: result
          servicePort: 5001
